--- a/src/vehical_managment_frontend/src/result.html
+++ b/src/vehical_managment_frontend/src/result.html
@@ -10,7 +10,7 @@
             padding: 0;
         }
         body {
-            background: url(../assets/bg.png);
+            background: url(./bg.png);
             background-size: cover;
             background-repeat: no-repeat;
             font-family: Arial, sans-serif;
@@ -87,5 +87,6 @@
             <div id="displayVehicleName"></div>
         </div>
     </div>
+    <script src="index.js"></script>
 </body>
 </html>
