--- a/src/vehical_managment_frontend/src/form.html
+++ b/src/vehical_managment_frontend/src/form.html
@@ -9,7 +9,8 @@
             padding: 0;
         }
         body {
-            background: url(../assets/bg.png);
+            
+            background: url(./bg.png);
             background-size: cover;
             background-repeat: no-repeat;
             font-family: 'Montserrat', sans-serif;
@@ -145,7 +146,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: #f1f3f2 url(../assets/loader.svg) no-repeat center center; /* Semi-transparent background */
+            background: #f1f3f2 url(./loader.svg) no-repeat center center; /* Semi-transparent background */
             display: flex;
             justify-content: center;
             align-items: center;
@@ -222,7 +223,7 @@
      -->
 </main>
 
-<script src="script.js"></script>
+<script src="index.js"></script>
 
 <!-- <script>
     var loader = document.getElementById('preloader');
