--- a/src/vehical_managment_frontend/src/index.html
+++ b/src/vehical_managment_frontend/src/index.html
@@ -1,112 +1,403 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <style>
-        body {
-            margin: 0;
-            padding: 0;
-            background: url(../assets/bg2.png);
-            background-size: cover;
-            background-repeat: no-repeat;
-            font-family: 'montserrat', sans-serif;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-        }
+      body {
+        margin: 0;
+        margin-top: 100px;
+        margin-bottom: 400px;
+        padding: 100px;
+        background: url(./bg2.png);
+        background-size: cover;
+        background-repeat: no-repeat;
+        font-family: "montserrat", sans-serif;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+      }
 
-        header {
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            width: 100%;
-            padding: 20px 60px 20px 0; 
-            background-color: rgba(0, 0, 0, 0.7);
-        }
+      header {
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        padding: 20px 60px 20px 0;
+        background-color: rgba(0, 0, 0, 0.7);
+      }
 
-        #logo {
-            font-family: 'Orbitron', sans-serif; 
-            font-size: 2rem;
+      #logo {
+        font-family: "Orbitron", sans-serif;
+        font-size: 2rem;
+        color: #fff;
+        margin-left: 20px;
+      }
+
+      #logo:hover {
+        color: #dc143c;
+        transition: 0.3s;
+      }
+      nav {
+        display: flex;
+        gap: 20px;
+        padding-right: 20px;
+        padding-left: 20px;
+      }
+
+      nav a {
+        color: #fff;
+        text-decoration: none;
+        font-size: 1rem;
+      }
+
+      h1 {
+        color: #fff;
+        text-align: center;
+        margin-bottom: 20px;
+      }
+
+      .button-container {
+        display: flex;
+        gap: 100px;
+        margin-left: auto;
+        margin-top: 330px;
+        margin-bottom: 180px;
+        padding-right: 75px;
+      }
+
+      .button {
+        background-color: #dc143c;
+        border: 2px solid #dc143c; /* Added 'solid' to specify the border style */
+        color: #fff;
+        padding: 10px 20px;
+        text-decoration: none;
+        border-radius: 5px;
+        font-size: 16px;
+        transition: background-color 0.3s, border-color 0.3s; /* Added border-color transition */
+      }
+
+      .button:hover {
+        background-color: transparent;
+        color: #000;
+        border-width: 2px;
+        border-color: #dc143c;
+      }
+      /*Form Styles*/
+      a:hover {
+        color: #dc143c;
+        transition: 0.3s;
+      }
+      form {
+        display: flex;
+        flex-direction: column;
+        margin: 10px;
+      }
+
+      label {
+        font-family: sans-serif;
+        font-size: 15px;
+        margin-bottom: 2px;
+        /*color: #00bfff; /* Light blue text for labels */
+        color: #fff;
+      }
+
+      input[type="text"],
+      input[type="date"],
+      input[type="number"],
+      input[type="file"] {
+        width: 95%;
+        padding: 5px;
+        margin-bottom: 12px;
+        border: 1px solid #ddd; /* Darker border */
+        border-radius: 3px;
+        outline: 0;
+        background-color: #fff; /* Dark background color */
+        color: #111; /* White text */
+        box-shadow: inset 1px 1px 5px rgba(0, 0, 0, 0.3);
+      }
+
+      input[type="date"] {
+        appearance: none;
+        background: #fff url("calendar-icon.png") no-repeat calc(100% + 10px)
+          center;
+        background-size: 20px;
+      }
+
+      input[type="submit"] {
+        background-color: #dc143c; /* Blue button background */
+        font-size: 20px;
+        font-weight: 400;
+        width: 160px;
+        color: #fff;
+        padding: 15px;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        transition: background-color 0.3s;
+        margin-bottom: 2px;
+      }
+
+      input[type="submit"]:hover {
+        background-color: #0056b3; /* Darker blue on hover */
+      }
+
+      #collectedData {
+        background-color: #444;
+        border: 1px solid #555;
+        border-radius: 4px;
+        padding: 20px;
+        margin-top: 20px;
+      }
+
+      .form-box {
+        display: flex;
+        justify-content: space-between;
+      }
+
+      .input-box,
+      .button-box {
+        width: 60%;
+      }
+
+      .choosefile {
+        border: 2px solid #111;
+        border-radius: 4px;
+        font-size: 13px;
+        margin-bottom: 2px;
+      }
+
+      .choosefile::-webkit-file-upload-button {
+        background: #000;
+        color: #fff;
+        padding: 2px 4px;
+        border: none;
+        border-radius: 50px;
+        cursor: pointer;
+      }
+
+      h2 {
+        font-size: 1.5rem;
+      }
+
+      /* Additional CSS for the result container */
+      #resultContainer {
+        background-color: #555;
+        border-radius: 10px;
+        padding: 20px;
+        margin-top: 20px;
+      }
+
+      #checkDetailsButton {
+        background-color: #007bff; /* Blue button background */
+        color: #fff;
+        padding: 10px;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        transition: background-color 0.3s;
+      }
+
+      #checkDetailsButton:hover {
+        background-color: #0056b3; /* Darker blue on hover */
+      }
+
+      .preloader {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: #f1f3f2 url(../assets/loader.svg) no-repeat center center; /* Semi-transparent background */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 9999; /* Ensure it appears above other elements */
+      }
+
+      .preloader img {
+        width: 50px;
+        height: 50px;
+      }
+      /*Results Style*/
+      labelRes {
+            font-family: sans-serif;
+            font-size: 15px;
+            margin-bottom: 14px;
+            /*color: #00bfff; /* Light blue text for labels */
             color: #fff;
-            margin-left: 20px;
         }
 
-        #logo:hover{
-            color: #DC143C;
-            transition: 0.3s;
+        inputRes[type="text"]{
+            width: 95%;
+            padding: 9px;
+            margin-bottom: 15px;
+            border: 1px solid #ddd; /* Darker border */
+            border-radius: 3px;
+            outline: 0;
+            background-color: #fff; /* Dark background color */
+            color: #111; /* White text */
+            box-shadow: inset 1px 1px 5px rgba(0, 0, 0, 0.3);
         }
-        nav {
-            display: flex;
-            gap: 20px;
-            padding-right: 20px;
-            padding-left: 20px;
+      #resultContainer {
+            width: 600px;
+            background-color: rgba(0, 0, 0, 0.4);
+            border-radius: 10px;
+            max-width: 600px;
+            margin: 15px auto 0px auto;
+            padding: 8px;
         }
 
-        nav a {
+        #checkDetailsButton {
+            background-color: #DC143C; /* Blue button background */
             color: #fff;
-            text-decoration: none;
-            font-size: 1rem;
+            padding: 10px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            transition: background-color 0.3s;
         }
 
-        h1 {
-            color: #fff;
-            text-align: center;
-            margin-bottom: 20px;
-        }
-
-        .button-container {
-            display: flex;
-            gap: 100px;
-            margin-left: auto;
-            margin-top: 180px;
-            padding-right: 75px;
-        }
-
-        .button {
-            background-color: #DC143C;
-            border: 2px solid #DC143C; /* Added 'solid' to specify the border style */
-            color: #fff;
-            padding: 10px 20px;
-            text-decoration: none;
-            border-radius: 5px;
-            font-size: 16px;
-            transition: background-color 0.3s, border-color 0.3s; /* Added border-color transition */
-        }
-    
-        .button:hover {
-            background-color: transparent;
-            border-width: 2px;
-            border-color: #DC143C;
-        }
-
-        a:hover{
-            color: #DC143C;
-            transition: 0.3s;
+        #checkDetailsButton:hover {
+            background-color: #0056b3; /* Darker blue on hover */
         }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <div id="logo">OPOC</div>
-        <nav>
-            <a href="#">HOME</a>
-            <a href="#">ABOUT US</a>
-            <a href="#">SERVICES</a>
-        </nav>
+      <div id="logo">OPOC</div>
+      <nav>
+        <a href="#">HOME</a>
+        <a href="#">ABOUT US</a>
+        <a href="#">SERVICES</a>
+      </nav>
     </header>
+      <div class="button-container">
+        <button id="rentVehicle" class="button">RENT VEHICLE</button>
+        <button id="seeVehicle" class="button">SEE VEHICLE</button>
+      </div>
+      <div class="form-box">
+        <form id="inputForm" style="display: block">
+          <!-- Vehicle Number Input -->
+          <label for="vehicalNumberUser_store">Enter Vehicle Number: </label>
+          <input
+            type="text"
+            id="vehicalNumberUser_store"
+            placeholder="Enter Vehicle Number"
+            required
+          />
 
-    <div class="button-container">
-        <a href="form.html" class="button">RENT VEHICLE</a>
-        <a href="result.html" class="button">SEE VEHICLE</a>
+          <!-- Image Upload -->
+          <label for="input_image_right">Upload Right Image: </label>
+          <input
+            type="file"
+            id="input_image_right"
+            class="choosefile"
+            accept="image/*"
+            required
+          />
+
+          <label for="input_image_left">Upload Left Image: </label>
+          <input
+            type="file"
+            id="input_image_left"
+            class="choosefile"
+            accept="image/*"
+            required
+          />
+
+          <label for="input_image_front">Upload Front Image: </label>
+          <input
+            type="file"
+            id="input_image_front"
+            class="choosefile"
+            accept="image/*"
+            required
+          />
+
+          <label for="input_image_back">Upload Back Image: </label>
+          <input
+            type="file"
+            id="input_image_back"
+            class="choosefile"
+            accept="image/*"
+            required
+          />
+
+          <label for="input_image_adhaar_curr_rider"
+            >Upload Adhaar Image:
+          </label>
+          <input
+            type="file"
+            id="input_image_adhaar_curr_rider"
+            class="choosefile"
+            accept="image/*"
+            required
+          />
+
+          <!-- Date Picker -->
+          <label for="datePicker">Select a Date: </label>
+          <input type="date" id="datePicker" required />
+
+          <!-- Map Details -->
+          <label for="mapDetails">Enter Map Details: </label>
+          <input type="text" id="mapDetails" required />
+
+          <label for="servicingDetails">Enter service Details: </label>
+          <input type="text" id="servicingDetails" required />
+
+          <!-- Owner Details -->
+          <label for="ownerDetails">Enter Owner Details: </label>
+          <input type="text" id="ownerDetails" required />
+
+          <!-- Integer Input -->
+          <label for="integerInput">Enter an Integer: </label>
+          <input type="number" id="integerInput" required />
+
+          <!-- Vehicle Name -->
+          <label for="vehicleName">Enter Vehicle Name: </label>
+          <input type="text" id="vehicleName" required />
+
+          <input type="submit" value="Submit" />
+        </form>
+      </div>
+      <div id="resultContainer"> <!-- New container for the result section -->
+        <div class="form-box">
+            <div class="input-box">
+                <!-- Display -->
+                <label class="labelRes" for="vehicleNumber">Enter Vehicle Number: </label>
+                <input class="inputRes" type="text" id="vehicleNumber" required>
+            </div>
+            <div class="button-box">
+                <!-- Check Details of Registered Vehicle -->
+                <button id="checkDetailsButton">Check Details</button>
+            </div>
+        </div>
+
+        <!-- Display all -->
+        <div id="collectedData" style="display: none;">
+            <h2>Collected Data</h2>
+            <div id="displayImages"></div>
+            <div id="displayTextData"></div>
+            <div id="displayMapDetails"></div>
+            <div id="displayOwnerDetails"></div>
+            <div id="displayInteger"></div>
+            <div id="displayVehicleName"></div>
+        </div>
     </div>
-</body>
+  </body>
 </html>
